--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="HAPPY BIRTHDAY KIA" />
+    <meta property="og:description" content="THE BIRTHDAY OF KIA" />
+    <meta property="og:site_name" content="artabed creative digital" />
+    <meta property="article:modified_time" content="#" />
+    <meta property="og:image" content="https://img.freepik.com/free-vector/happy-birthday-lettering-with-golden-letters_52683-35047.jpg" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="600" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:label1" content="Est. reading time">
+    <meta name="twitter:data1" content="6 minutes">
+    <meta name="theme-color" content="#111" media="(prefers-color-scheme: dark)">
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="img/kia.png">
+    <link href="img/kia.png" rel="icon">
+    <link href="img/kia.png" rel="apple-touch-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
